<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/fond_gris"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:contentDescription="@string/avatar"
        android:src="@android:drawable/ic_menu_myplaces"
        app:tint="#FFFFFF"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvNomAmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="15dp"
        android:text="@string/ami_nom_courriel"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/btnSupprimerAmi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/supprimer_ami"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_delete"
        app:tint="#A21414"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

</LinearLayout>