<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitreAmis"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/fond_vert"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/my_friends"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ajouterAmi"
                android:textColor="#FF000000"
                android:textSize="19sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailAmi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/fond_gris"
                android:hint="@string/exemple_courriel"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btnAjouterAmi"
                android:layout_width="316dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#AADD66"
                android:text="@string/boutton_ajouter_ami"
                android:textColor="#455A64" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="#DDDDDD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/liste_amis"
                android:textColor="#FF000000"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListeAmis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:listitem="@layout/item_ami" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>